adjust status buttons to avoid filling filling container, becoming too big

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -15,5 +15,6 @@
 }
 
 .group-wrap {
+  display: block;
   flex-wrap: wrap;
 }
